manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-wallet
  labels:
    app: py-wallet
spec:
  type: ClusterIP
  selector:
    app: py-wallet
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
