manifests/app/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-wallet-front
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: py-wallet-dev-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pywallet.dev
      secretName: py-wallet-tls
  rules:
    - host: pywallet.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-wallet-front
                port:
                  number: 80
