manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-wallet
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: py-wallet-dev-redirect-https@kubernetescrd,py-wallet-dev-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pywallet.dev
      secretName: py-wallet-tls
  rules:
    - host: pywallet.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: py-wallet
                port:
                  number: 80
