manifests/app/networkpolicy-snapshot-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: py-wallet-snapshot-service-ingress
spec:
  podSelector:
    matchLabels:
      app: py-wallet-snapshot-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8001
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8001
